--- a/Form-Controls/styles.css
+++ b/Form-Controls/styles.css
@@ -61,13 +61,13 @@ body {
   select:focus,
   button:focus {
     outline: none;
-    border-color: #4CAF50;
+    border-color: #564caf;
     box-shadow: 0 0 5px rgba(76, 175, 80, 0.5);
   }
   
   button {
     margin-top: 15px;
-    background-color: #4CAF50;
+    background-color: #111311;
     color: white;
     font-weight: bold;
     border: none;
