--- a/Wireframe/css/style.css
+++ b/Wireframe/css/style.css
@@ -41,6 +41,7 @@ body {
   }
 .header-h{
     text-shadow: 3px 5px 10px #373636; 
+    margin-bottom: 12px;
 }
 
 #git-explore{
@@ -65,14 +66,15 @@ body {
     display: flex;
     justify-content: space-around;
     list-style: none;
+    margin: 30px;
     
   }
 .header-nav li a{
     color: white;
-    font-size: 12px;
+    font-size: 24px;
     text-decoration:none;
     border-radius: 5px;
-    padding: 8px 6px;
+    padding: 10px 8px;
     background: linear-gradient(#6a5539 25%, #bbae9e);
     box-shadow: 2px 2px 10px #000 ; 
     
@@ -89,8 +91,8 @@ footer{
     background-color: #483d2d99;    
 }
 button{
-    margin: 10px;
-    padding: 10px 20px;
+    margin: 20px;
+    padding: 20px 30px;
     background: linear-gradient(#6a5539 25%, #bbae9e);
     border: none;
     border-radius: 5px;
@@ -100,6 +102,8 @@ button{
 button a{
     color: white;
     text-decoration: none;
+    font-size: 24px;
+    margin-left: 10px;
 }
 .inline-articles{
     display:flex;
