--- a/Wireframe/css/style.css
+++ b/Wireframe/css/style.css
@@ -13,6 +13,7 @@
 }
 header{
     color: cadetblue;
+    text-align: center;
 }
 
 
@@ -21,13 +22,17 @@ body{
 }
 
 .image1 {
-    width: 300px;
-    border-radius: 50px;
-    margin: 10px;
+    width: 90%;
+    border-radius: 30px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    
+
 }
 
 #git_desc {
-    display: flex;
+    display: block;
     flex: content;
     margin-bottom: 40px;
     margin-top: 40px;
@@ -43,7 +48,13 @@ body{
 }
 
 .image {
-    width: 300px;
-    border-radius: 50px;
+    width: 90%;
+    border-radius: 20px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
 }
+
+
+
 
