--- a/Wireframe/css/style.css
+++ b/Wireframe/css/style.css
@@ -88,48 +88,49 @@ footer{
     margin: 0 auto;
     text-align: center;
     width: 100%;
-    background-color: #483d2d99;    
+    background-color: #483d2d;
+    position: fixed;
+    bottom: 0;
+    padding: 10px;
+    color: white;
+      
 }
-button{
-    margin: 20px;
-    padding: 20px 30px;
+.button{
+    
     background: linear-gradient(#6a5539 25%, #bbae9e);
     border: none;
     border-radius: 5px;
     cursor: pointer;
-    box-shadow: 5px 2px 10px; 
-}
-button a{
+    box-shadow: 5px 2px 10px;
     color: white;
     text-decoration: none;
-    font-size: 24px;
-    margin-left: 10px;
+    font-size: 18;
+    padding: 10px;
+    margin: 20px
+   
 }
+
 .inline-articles{
     display:flex;
     justify-content: space-between;
 }
-#article-3{
+.article{
     width: 50%;
     margin: 10px;
     background-color: #F5F5F599;
     padding: 10px;
     border-radius: 10px;
     box-shadow: 5px 2px 10px;
-}
-#article-2{
-    width: 50%;
-    margin: 10px;
-    background-color: #F5F5F599;
-    padding: 10px;
-    border-radius: 10px;
-    box-shadow: 5px 2px 10px;
+    padding-bottom: 20px
 }
 #article-1{
     width: 98%;
     margin: 10px auto;
-    background-color: #F5F5F599;
-    padding: 10px;
-    border-radius: 10px;
-    box-shadow: 5px 2px 10px;
+}
+main{
+
+        width: 100%;
+        position: relative;        
+        padding-bottom: 100px; 
+    
 }
