--- a/Form-Controls/styles.css
+++ b/Form-Controls/styles.css
@@ -20,6 +20,10 @@
     text-align: center;
   }
 
+  div {
+    margin-bottom: 1rem;
+  }
+
   label {
     display: block;
     font-weight: bold;
@@ -44,6 +48,29 @@
     display: block;
     text-align: left;
     padding-left: 110px;
+  }
+
+  input[type="text"],
+  input[type="email"],
+  input[type="date"],
+  select {
+    padding: 0.5rem;
+    border: 1px solid blue;
+    border-radius: 4px;
+  }
+
+  button {
+    padding: 0.5rem 1rem;
+    color: white;
+    background-color: #c1121f;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    transition: background-color 0.3s;
+  }
+  
+  button:hover {
+    background-color: #780000;
   }
   
   footer {
