--- a/Form-Controls/styles.css
+++ b/Form-Controls/styles.css
@@ -1,10 +1,12 @@
   body {
     font-family: Arial, sans-serif;
     background-color: #caf0f8;
+    line-height: 1.5;
   }
   
   header {
     text-align: center;
+    margin-top: 50px;
   }
 
   h1 {
@@ -55,9 +57,17 @@
   input[type="date"],
   select {
     padding: 0.5rem;
-    border: 1px solid blue;
+    border: 1px solid #00296b;
     border-radius: 4px;
   }
+
+  input:focus,
+  select:focus {
+    outline: none;
+    border-color: #007bff;
+    background-color: #e1e5f2;
+  }
+
 
   button {
     padding: 0.5rem 1rem;
