--- a/Wireframe/css/style.css
+++ b/Wireframe/css/style.css
@@ -74,6 +74,10 @@ button{
 button:hover{
     background-color: rgba(59, 59, 51, 0.868);
 }
+.card button {
+
+    max-width: 100%;
+}
 
 
 .content {
@@ -88,13 +92,15 @@ button:hover{
 .card {
 
     width: 38%;
-    height: 500px;
+    max-width: 100%;
     border: 1px solid rgba(233, 239, 233, .5);
     border-radius: 20px;
     background-color: rgb(255, 255, 255);
     text-align: left;
     margin: 20px;
     padding: 20px;
+    overflow: hidden;
+
 }
 .card img {
     
@@ -109,10 +115,17 @@ footer {
     position: fixed;
     bottom: 0;
     width: 100%;
+    height: 50px;
     text-align: center;
     background-color: rgba(0, 0, 0, .5);
     padding: 10px;
     color: white;
+    z-index: 10;
+
+}
+.article-container {
+    padding-bottom: 80px;
+  
 }
 
 a {
