--- a/Form-Controls/styles.css
+++ b/Form-Controls/styles.css
@@ -14,6 +14,7 @@ body {
     min-height: 100vh;
     margin: 0;
     text-align: center;
+
 }
 
 /* ------------------- header ----------------------- */
@@ -33,7 +34,7 @@ main {
     background-color: #fff;
     border-radius: 5px;
     box-shadow: 0 2px 10px;
-    width: 600px;
+    width: 580px;
     margin: auto;
 }
 
@@ -126,6 +127,26 @@ option {
     background-color: #3e8e41;
 }
 
+/* ------------------- form-control calendar ----------------------- */
+
+#date{
+    border: 2px solid #f0f0f0;
+    border-radius: 4px;
+    display: block;
+    width: 100%;
+    padding: 10px;
+    font-size: 14px;
+}
+
+#date input {
+    margin-top: 1rem;
+    background-color: rgba(8, 249, 217, 0.357);
+    color: rgb(24, 11, 64);
+    font-size: larger;
+}
+
+/* ------------------- submit btn ----------------------- */
+
 .form button {
     cursor: pointer;
     background-color: #3498db;
@@ -139,7 +160,8 @@ option {
     width: 100%;
 }
 
-/* ------------------- footer ----------------------- */
+
+/* ------------------- footer -------------------------------------- */
 
 
 footer {
