--- a/Form-Controls/styles.css
+++ b/Form-Controls/styles.css
@@ -147,17 +147,26 @@ option {
 
 /* ------------------- submit btn ----------------------- */
 
-.form button {
-    cursor: pointer;
+.form-btn {
     background-color: #3498db;
-    border: 2px solid #3498db;
-    border-radius: 4px;
-    color: #ffff;
-    display: block;
-    font-size: 16px;
-    padding: 10px;
+    border: none; 
+    color: white; 
+    padding: 10px 20px; 
+    text-align: center; 
+    text-decoration: none; 
+    display: block; 
+    font-size: 16px; 
     margin-top: 20px;
+    cursor: pointer; 
+    border-radius: 5px;
+    transition: background-color 0.3s;
+    box-shadow: 0 2px 10px;
     width: 100%;
+}
+
+button:hover {
+    background-color: hsl(173, 100%, 50%);
+    color: black;
 }
 
 
