--- a/Form-Controls/styles.css
+++ b/Form-Controls/styles.css
@@ -1,75 +1,77 @@
-    html, body {
-        height: 100%;
-        margin: 0;
-        font-family: Arial, Helvetica, sans-serif;
-    }
+html,
+body {
+  height: 100%;
+  margin: 0;
+  font-family: Arial, Helvetica, sans-serif;
+}
 
-    header {
-        padding-bottom: 20px;
-        text-align: center;
-    }
+header {
+  padding-bottom: 20px;
+  text-align: center;
+}
 
-    main {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        height: 100vh; 
-    }
+main {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
 
-    form {
-        width: 100%;
-        max-width: 400px;
-        max-height: 100%;
-        justify-content: center;
-        background-color: #333;
-        color: #f1f1f1;
-        padding: 20px;
-        border-radius: 10px;
-    }
+form {
+  width: 100%;
+  max-width: 400px;
+  max-height: 100%;
+  justify-content: center;
+  background-color: #333;
+  color: #f1f1f1;
+  padding: 20px;
+  border-radius: 10px;
+}
 
-    form div {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        margin-bottom: 15px;
-    }
+form div {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 15px;
+}
 
-    label {
-        width: 150px;
-        text-align: right;
-        margin-right: 20px;
-    }
+label {
+  width: 150px;
+  text-align: right;
+  margin-right: 20px;
+}
 
-    input, select {
-        flex: 1;
-        padding: 8px;
-        font-size: 14px;
-        max-width: 100%;
-        border-radius: 5px;  
-        border: none;   
-    }
+input,
+select {
+  flex: 1;
+  padding: 8px;
+  font-size: 14px;
+  max-width: 100%;
+  border-radius: 5px;
+  border: none;
+}
 
-    button {
-        width: 100%;
-        padding: 10px 20px;
-        font-size: 14px;
-        font-weight: bolder;
-        margin-top: 30px;
-        margin-bottom: 10px;
-        border-radius: 5px;  
-        background-color: #f1f1f1;
-        border: none;
-        cursor: pointer;
-    }
+button {
+  width: 100%;
+  padding: 10px 20px;
+  font-size: 14px;
+  font-weight: bolder;
+  margin-top: 30px;
+  margin-bottom: 10px;
+  border-radius: 5px;
+  background-color: #f1f1f1;
+  border: none;
+  cursor: pointer;
+}
 
-    footer {
-        background-color: #333;
-        color: white;
-        text-align: center;
-    }
+footer {
+  background-color: #333;
+  color: white;
+  text-align: center;
+}
 
-    footer h2 {
-        font-size: small;
-        font-weight: lighter;
-        padding: 50px 0;
-    }
+footer h2 {
+  font-size: small;
+  font-weight: lighter;
+  padding: 50px 0;
+}
