--- a/Form-Controls/styles.css
+++ b/Form-Controls/styles.css
@@ -1,14 +1,15 @@
 body {
     width: 100%;
     padding: 1em 1em 2em 3em;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; 
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; 
     background-color: #f5f5f5;  
     color: #333333;   
+    font-size: large;
 }
 
 .form_container {
     width: 700px;
-    height: 580px;
+    height: 630px;
     border-color: black;
     border: 1px;
     border-style: solid;
@@ -62,7 +63,7 @@ input:invalid {
     text-align: center;
     text-align: none;
     font-weight: bold;
-    font-size: 16px;
+    font-size: 24px;
     cursor: pointer;
     display: inline-block;
     border-radius: 10px;
@@ -83,5 +84,8 @@ input, select {
     color: #333333;
   }
 
+  .name, .email, p, .size, .date{
+    font-weight: bold;
+  }
 
 
