--- a/Wireframe/css/style.css
+++ b/Wireframe/css/style.css
@@ -2,6 +2,7 @@ body {
     background-color: slategray;
     margin: 0;
     padding: 0;
+    align-content: center;
     box-sizing: border-box;
 }
 
