--- a/Form-Controls/styles.css
+++ b/Form-Controls/styles.css
@@ -3,18 +3,17 @@ body {
     padding: 1em 1em 2em 3em;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; 
     background-color: #f5f5f5;  
-    color: #333333;   
+    color: #ebe0e0;   
     font-size: large;
 }
 
 .form_container {
     width: 700px;
-    height: 630px;
+    height: 610px;
     padding: 2em;
-    background-color: bisque;
+    background-color: rgb(59, 147, 185);
     padding: 1em;
-    background-color: #ffffff;
-    color: #333333;
+    color: #ffffff;
 }
 
 input:valid {
@@ -29,7 +28,7 @@ input:invalid {
 
   input[type=text], input[type=email], input[type=date], select {
     width: 50%;
-    padding: 12px 20px;
+    padding: 8px 20px;
     margin: 8px 0;
     display: block;
     border: 1px solid #ccc;
@@ -65,6 +64,8 @@ input:invalid {
     display: inline-block;
     border-radius: 10px;
     background-color: rgb(31, 159, 159);
+    width: 300px;
+    
   }
 header, footer {
     background-color: #1b350e;
@@ -87,5 +88,10 @@ input, select {
 
   fieldset {
     padding: 1em;
+  }
+
+  legend {
+    font-weight: bold;
+    font-size: 24px;
   }
 
