Try to fix Button colour Accessibility

--- a/Form-Controls/styles.css
+++ b/Form-Controls/styles.css
@@ -34,7 +34,7 @@ body {
   }
 
   button {
-    background-color: #4A90E2;
+    background-color: #357ABD;
     color: #fff;
     cursor: pointer;
     font-weight: bold;
@@ -42,10 +42,10 @@ body {
 
   input:focus, select:focus, button:focus {
     outline: none;
-    border-color: #4A90E2;
+    border-color: #357ABD;
     box-shadow: 0 0 5px #4A90E2;
   }
   
   button:hover {
-    background-color: #357ABD;
+    background-color: #4A90E2;
   }
