--- a/Wireframe/css/style.css
+++ b/Wireframe/css/style.css
@@ -34,7 +34,7 @@ p {
 
 article {
     background-color: white;
-    margin: 10px 0;
+    margin: 10px 10px;
     padding: 15px;
     border: 1px solid #ccc;
     border-radius: 5px;
@@ -71,4 +71,7 @@ footer {
     position: fixed;
     width: 100%;
     bottom: 0;
+}
+#article{
+    display: flex;
 }
