--- a/Wireframe/css/style.css
+++ b/Wireframe/css/style.css
@@ -30,11 +30,12 @@ p {
     flex: 1;
     padding: 20px;
     background-color: #f4f4f4;
+    
 }
 
 article {
-    background-color: white;
-    margin: 10px 0;
+    background-color: #f4f4f4;
+    margin: 10px 10px;
     padding: 15px;
     border: 1px solid #ccc;
     border-radius: 5px;
@@ -72,3 +73,9 @@ footer {
     width: 100%;
     bottom: 0;
 }
+#article{
+    display: flex;
+    
+
+}
+
