added a header styling with text align centre and h1 margin and color changed to white

--- a/Wireframe/css/style.css
+++ b/Wireframe/css/style.css
@@ -4,6 +4,13 @@ body {
     padding: 0;
     box-sizing: border-box;
 }
+header {
+    text-align: center;
+}
+h1 {
+    margin: 15px 0;
+    color: white;
+}
 
 img {
     width: 50%;
