--- a/Wireframe/css/style.css
+++ b/Wireframe/css/style.css
@@ -13,12 +13,16 @@ h1 {
 }
 
 img {
-    width: 50%;
+    width: 100%;
+    height: 300px;
+    margin: 0 auto;
     display: block;
 }
 
+
 section {
     width: 70%;
-    margin: 0;
+    margin: 0 auto;
     background: aqua;
 }
+
