1)Changed image to background image
2)Removed position absolute as requested.

3) fixed for "..." attribute by adding id

4) Changed all form fields to be the same width

5) Added pattern attribute to form.

6) Achieved 100% for accessibility on lighthouse page analysis.

--- a/Form-Controls/styles.css
+++ b/Form-Controls/styles.css
@@ -6,7 +6,9 @@
   }
   
   body {
-      margin: 0;
+    margin: 0;
+    background-image: url(shirt_background.jpg);
+    background-size: 100%;
   }
   
   .container {
@@ -24,17 +26,9 @@
       max-height: 100%;
       max-width: 100%;
   }
-  
-  .image_container {
-      display: flex;
-  }
-  
+
   .form_wrapper {
-      position: absolute;
-      left: 0px;
-      top: 0;
-      width: 100%;
-      padding: 20px;
+      padding: 60px;
   }
   
   .heading-text:first-child {
@@ -53,7 +47,8 @@
   }
   
   form {
-      padding: 20px;
+      max-width: 450px;
+      margin-top: 20px;
       display: flex;
       flex-flow: column;    
   }
@@ -66,16 +61,16 @@
       text-align: center;
       background: #9e9e9ed4;
       font-size: 25px;
-      font-family:monospace,SF Pro Display,SF Pro Icons,Helvetica Neue,Helvetica,Arial,sans-serif;;
+      left: 0;
+      font-family:monospace,SF Pro Display,SF Pro Icons,Helvetica Neue,Helvetica,Arial,sans-serif;
   }
   
   
   .input-container {
       margin-bottom: 20px;
-      position: relative;
-      display: inline-block;
+      display: flex;
+      flex-flow: column;
       width: 100%;
-      max-width: 400px;
   }
   
   .input-label {
@@ -89,7 +84,6 @@
   }
   
   .text-input {
-      width: 100%;
       padding: 12px;
       font-size: 16px;
       border: 2px solid var(--border-color);
@@ -118,6 +112,12 @@
     border: 2px solid var(--select-border-color);
     border-radius: 5px;
     transition: border-color 0.3s ease;
+    /* arrow customize  */
+    appearance: none;
+    background-image: url(data:image/svg+xml;charset=US-ASCII,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%22292.4%22%20height%3D%22292.4%22%3E%3Cpath%20fill%3D%22%23131313%22%20d%3D%22M287%2069.4a17.6%2017.6%200%200%200-13-5.4H18.4c-5%200-9.3%201.8-12.9%205.4A17.6%2017.6%200%200%200%200%2082.2c0%205%201.8%209.3%205.4%2012.9l128%20127.9c3.6%203.6%207.8%205.4%2012.8%205.4s9.2-1.8%2012.8-5.4L287%2095c3.5-3.5%205.4-7.8%205.4-12.8%200-5-1.9-9.2-5.5-12.8z%22%2F%3E%3C%2Fsvg%3E);
+    background-repeat: no-repeat;
+    background-position: right 0.7rem top 50%;
+    background-size: 0.65rem auto;
   }
   
   .custom-select:hover {
@@ -127,6 +127,12 @@
   .custom-select:focus {
     border-color: var(--primary-color);
     box-shadow: 0 0 8px rgba(0, 102, 204, 0.5);
+  }
+
+  input#date {
+    padding: 12px;
+    border: 2px solid var(--select-border-color);
+    border-radius: 5px;
   }
   
   button {
