Changed to webp image and resolution of the image is scaled down.

--- a/Form-Controls/styles.css
+++ b/Form-Controls/styles.css
@@ -7,7 +7,7 @@
   
   body {
     margin: 0;
-    background-image: url(shirt_background.jpg);
+    background-image: url(shirt_background.webp);
     background-size: 100%;
   }
   
