--- a/Form-Controls/styles.css
+++ b/Form-Controls/styles.css
@@ -1,7 +1,7 @@
 body{
     background-color: #c7b5aa;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
-    font-size: 15px;
+    font-size: 1.5rem;
     color: #12100e;
     width: 100%;
     margin: 0;
@@ -17,7 +17,7 @@ header{
 }
 
 form{
-    max-width: 600px;
+    max-width: 50rem;
     background-color: #dbcdbc;
     margin: 4rem auto;
     padding: 3rem;
