--- a/Wireframe/css/style.css
+++ b/Wireframe/css/style.css
@@ -13,7 +13,9 @@
   }
   
   main {
-    padding: 20px;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 20px;
   }
 
   h1 {
@@ -21,36 +23,10 @@
     font-size: 2.5em;
   }
   
-  .articles {
-    display: flex;
-    flex-direction: column;
-    gap: 20px;
+  article:first-child {
+    grid-column: span 2;
   }
-  
-  .articles > article:first-child {
-    padding: 20px;
-    border-radius: 5px;
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    padding-left: 50px;
-  }
-  
-  .articles > article:first-child img {
-    width: 600px;
-    height: auto;
-    border-radius: 5px;
-    margin-bottom: 15px;
-    align-self: center;
-  }
-  
-  .article-grid {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    gap: 20px;
-    margin-bottom: 50px;
-  }
-  
+    
   article {
     background-color: #dee2e6;
     padding: 20px;
