--- a/Wireframe/css/style.css
+++ b/Wireframe/css/style.css
@@ -14,6 +14,7 @@ header {
     color: white;
     text-align: center;
     padding: 20px 0;
+    
 }
 
 h1 {
@@ -34,17 +35,20 @@ p {
 }
 
 article {
-    background-color: #f4f4f4;
-    margin: 10px 10px;
+    background-color: #e0ffe0;
+    margin: 20px 150px;
     padding: 15px;
     border: 1px solid #ccc;
     border-radius: 5px;
+    border-color: #4CAF50;
+    
 }
 
 /* Styling first article differently */
 article:first-child {
     background-color: #e0ffe0;
     border-color: #4CAF50;
+    margin: 35px 20px 40px;
 }
 
 h2 {
@@ -75,7 +79,7 @@ footer {
 }
 #article{
     display: flex;
-    
-
+    align-items: baseline;
+    width: 100%;
 }
 
