added image for the first article, added description to the article, and styled the layout of article

--- a/Wireframe/css/style.css
+++ b/Wireframe/css/style.css
@@ -4,3 +4,23 @@ body {
     font-size: 16px;
     text-align: center;
 }
+
+.container {
+    width: 500px;
+    margin: 0 auto;
+    overflow: hidden;
+}
+
+img-container img {
+    width:100%
+}
+
+.description {
+    width:100%;
+    text-align: left;
+    padding-top:10px;   
+}
+
+.description h2 {
+     margin:0
+}
