--- a/Wireframe/css/style.css
+++ b/Wireframe/css/style.css
@@ -1,4 +1,10 @@
 /* General page styling */
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
 body {
     font-family: Arial, sans-serif;
     margin: 0;
@@ -14,6 +20,7 @@ header {
     color: white;
     text-align: center;
     padding: 20px 0;
+
 }
 
 h1 {
@@ -30,20 +37,24 @@ p {
     flex: 1;
     padding: 20px;
     background-color: #f4f4f4;
+
 }
 
 article {
-    background-color: white;
-    margin: 10px 10px;
+    background-color: #e0ffe0;
+    margin: 20px 150px;
     padding: 15px;
     border: 1px solid #ccc;
     border-radius: 5px;
+    border-color: #4CAF50;
+
 }
 
 /* Styling first article differently */
 article:first-child {
     background-color: #e0ffe0;
     border-color: #4CAF50;
+    margin: 35px 20px 40px;
 }
 
 h2 {
@@ -72,6 +83,9 @@ footer {
     width: 100%;
     bottom: 0;
 }
-#article{
+
+#article-2col {
     display: flex;
+    align-items: baseline;
+    width: 100%;
 }
