--- a/Wireframe/css/style.css
+++ b/Wireframe/css/style.css
@@ -103,7 +103,7 @@ h1 {
 /*  ------------button style ----------------*/
 
 
-button {
+.button {
     background-color: #353cff; 
     border: none; 
     color: white; 
@@ -119,7 +119,7 @@ button {
     box-shadow: 0 2px 10px;
 }
 
-button:hover {
+.button:hover {
     background-color: hsl(173, 100%, 50%);
     color: black;
 }
