--- a/Form-Controls/styles.css
+++ b/Form-Controls/styles.css
@@ -2,11 +2,14 @@
     font-family: Arial, sans-serif;
     background-color: #FFFDF5;
     line-height: 1.5;
+    min-height: 100vh;
+    display: flex; 
+    flex-direction: column;
+	  margin: 0;
   }
   
   header {
     text-align: center;
-    margin-top: 50px;
   }
 
   h1 {
@@ -16,10 +19,11 @@
   main {
     background-color: #ebbab9; 
     border-radius: 8px;
-    margin: 2rem auto;
-    max-width: 300px;
+    margin: 1rem auto;
+    width: 90%;
+    max-width: 400px;
     padding: 1rem;
-    text-align: center;
+    flex: 0 1 auto;
   }
 
   div {
@@ -44,14 +48,6 @@
     color: #003D00;
   }
   
-  label[for="red"],
-  label[for="blue"],
-  label[for="green"] {
-    display: block;
-    text-align: left;
-    padding-left: 110px;
-  }
-
   input[type="text"],
   input[type="email"],
   input[type="date"],
@@ -59,6 +55,8 @@
     padding: 0.5rem;
     border: 1px solid #00296b;
     border-radius: 4px;
+    width: 100%; 
+    box-sizing: border-box;
   }
 
   input:focus,
@@ -88,9 +86,6 @@
     color: white;
     text-align: center;
     padding: 5px;
-    position: fixed;
-    bottom: 0;
+    margin-top: auto;
     width: 100%;
-      left: 0;
-      right: 0;
   }
