--- a/Form-Controls/styles.css
+++ b/Form-Controls/styles.css
@@ -1,54 +1,45 @@
 body {
-    background-image: linear-gradient(to right, rgba(0, 255, 225, 0.639), rgba(212, 0, 255, 0.437)); 
     font-family: Arial, sans-serif;
-    font-size: 2rem;
-    background-color: #f4f4f4;
     margin: 20px;
-    padding: 20px;
-    border-radius: 15px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
-form {
-    background: #fff;
-    padding: 20px;
-    border-radius: 15px;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-    margin: auto;
- 
-
+h1 {
+    color: blue;
 }
 
 label {
     display: block;
-    margin-bottom: 5px;
+    margin: 10px 0 5px;
 }
-.delivery-container{
-    background-color: rgba(163, 13, 227, 0.154);
-    padding: 20px;
-    border-radius: 8px;
-    max-width: 600px;
-    margin: auto;
-    box-shadow: 0 2px 10px turquoise;
 
-}
-input, select {
-    width: 100%;
-    padding: 10px;
-    margin-bottom: 15px;
+input[type="text"],
+input[type="email"],
+input[type="password"],
+select,
+input[type="date"] {
+    width: 90%;
+    padding: 18px;
+    margin-bottom: 10px;
     border: 2px solid #ccc;
-    border-radius: 3px;
+    border-radius: 24px;
 }
 
-button {
-    background-color: #c57ee8;
-    color: black;
-    padding: 10px;
+input[type="submit"] {
+    background-color: #2622e2;
+    color: white;
+    padding: 10px 15px;
     border: none;
-    border-radius: 5px 20px;
+    border-radius: 24px;
     cursor: pointer;
 }
 
-button:hover {
-    background-color: #53e9e7;
+input[type="submit"]:hover {
+    background-color: #0ab1e4;
+}
+
+input:focus,
+select:focus {
+    border-color: #3ef905;
+    outline:#4CAF50;
+    box-shadow: 0 0 5px rgba(226, 224, 93, 0.5);
 }
