--- a/Wireframe/css/style.css
+++ b/Wireframe/css/style.css
@@ -10,9 +10,8 @@ body {
     margin: 0;
     padding: 0;
     line-height: 1.6;
-    display: flex;
-    flex-direction: column;
-    min-height: 100vh;
+    background-size: cover;
+    background-color: silver;
 }
 
 header {
@@ -32,29 +31,21 @@ p {
     margin: 5px 0;
 }
 
-/* Articles Section */
-.articles {
-    flex: 1;
-    padding: 20px;
-    background-color: #f4f4f4;
-
-}
 
 article {
     background-color: #e0ffe0;
-    margin: 20px 150px;
-    padding: 15px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    border-color: #4CAF50;
-
+    padding: 30px 30px;
+    border: 2px solid #ccc;
+    border-color:#4CAF50;
+    margin: 10px 350px;
 }
 
 /* Styling first article differently */
 article:first-child {
     background-color: #e0ffe0;
     border-color: #4CAF50;
-    margin: 35px 20px 40px;
+    margin: 35px 200px;
+    padding: 35px;
 }
 
 h2 {
@@ -62,30 +53,18 @@ h2 {
     margin-top: 0;
 }
 
-/* Link styles */
 a {
     color: #4CAF50;
     text-decoration: none;
     font-weight: bold;
 }
-
-a:hover {
-    text-decoration: underline;
-}
-
-/* Footer */
 footer {
     background-color: #333;
     color: white;
     text-align: center;
-    padding: 10px 0;
+    padding: 30px 0;
     position: fixed;
     width: 100%;
     bottom: 0;
-}
-
-#article-2col {
-    display: flex;
-    align-items: baseline;
-    width: 100%;
+    height: 80px;
 }
