--- a/Form-Controls/styles.css
+++ b/Form-Controls/styles.css
@@ -18,10 +18,10 @@
   
   main {
     background-color: #ebbab9; 
-    border-radius: 8px;
+    border-radius: 0.5rem;
     margin: 1rem auto;
     width: 90%;
-    max-width: 400px;
+    max-width: 25rem;
     padding: 1rem;
     flex: 0 1 auto;
   }
@@ -46,7 +46,7 @@
   select {
     padding: 0.5rem;
     border: 1px solid #00296b;
-    border-radius: 4px;
+    border-radius: 0.25rem;
     width: 100%; 
     box-sizing: border-box;
   }
@@ -64,7 +64,7 @@
     color: white;
     background-color: #c1121f;
     border: none;
-    border-radius: 4px;
+    border-radius: 0.25rem;
     cursor: pointer;
     transition: background-color 0.3s;
   }
@@ -77,7 +77,7 @@
     background-color: #003049;
     color: white;
     text-align: center;
-    padding: 5px;
+    padding: 0.2rem;
     margin-top: auto;
     width: 100%;
   }
