changed the font size in the header

--- a/Wireframe/css/style.css
+++ b/Wireframe/css/style.css
@@ -17,10 +17,9 @@ body {
 header {
     margin: 2rem 0;
     text-align: center;
-    gap: 1rem;
     color:#0008ff;
     font-weight: 600;
-    font-size: medium;
+    font-size: 1.3rem;
     
 }
 
@@ -62,8 +61,9 @@ h1 {
 .overlay {
     background-color: rgba(127, 176, 255, 0.189); /* layer transparent for to read the text */
     color: rgb(30, 17, 75);
-    padding: 1.5rem;
+    padding: 1.7rem;
 } 
+
 
 /*  ------------Section wrapper ----------------*/
 
