--- a/Wireframe/css/style.css
+++ b/Wireframe/css/style.css
@@ -6,11 +6,13 @@
 article {
     margin-bottom: 50px;
 }
-.article-section:first-child {
+
+article:first-child {
     width: 700px;
     display: block;
     margin-left: auto;
     margin-right: auto;
+    color: red;
 }
 
 button {
@@ -37,6 +39,11 @@ button {
     display: flex;
     align-items: center;
     justify-content: space-around;
+
+}
+
+#article-3 {
+    margin-left: -200px;
 }
 
 #footer {
