--- a/Wireframe/css/style.css
+++ b/Wireframe/css/style.css
@@ -7,12 +7,11 @@ article {
     margin-bottom: 50px;
 }
 
-article:first-child {
-    width: 700px;
+#article-1 {
+    width: 400px;
     display: block;
     margin-left: auto;
     margin-right: auto;
-    color: red;
 }
 
 button {
