--- a/Wireframe/css/style.css
+++ b/Wireframe/css/style.css
@@ -15,9 +15,11 @@ article {
 }
 
 button {
-    width: 90px;
-    height: 30px;
-    padding: 3px 10px;
+    margin-top: 20px;
+    padding: 15px 20px;
+    font-size: 20px;
+    border-radius: 5px;
+    border-color: rgb(194, 197, 197);
 }
 
 .text-wrap {
@@ -39,10 +41,6 @@ button {
     align-items: center;
     justify-content: space-around;
 
-}
-
-#article-3 {
-    margin-left: -200px;
 }
 
 #footer {
