--- a/Form-Controls/styles.css
+++ b/Form-Controls/styles.css
@@ -1,4 +1,4 @@
-* {
+ * {
     padding: 5px;
     margin: 10px;
     background-color: rgb(222, 206, 206);
@@ -23,13 +23,16 @@
   label{
     color: #0a0a09;
     font-weight: bold;  
-  }
+  } 
   
-  input{
-    background-color: aliceblue;
-  }
 
-  .shirt-colours {
+  input {
+    background-color: aliceblue;
+    border: 1px solid #ccc; 
+    padding: 8px; 
+}
+
+  .shirt-colors {
     display: flex;
     justify-content: center;
     align-content: center;
@@ -46,7 +49,7 @@
     justify-content: center;
   }
   
-#size{
+.size{
     background-color: aliceblue;
 }
 
@@ -59,8 +62,15 @@
     background-color: rgb(12, 12, 11);
   }
 
+  .btn:hover {
+    background-color: #444; 
+    cursor: pointer; 
+}
+
 
   footer h2 {
     font-size: 0.75rem;
     text-align: center;
-  }
+  } 
+
+  
