--- a/Wireframe/css/style.css
+++ b/Wireframe/css/style.css
@@ -36,6 +36,7 @@ article:first-child{
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin: 2em auto;
 }
 article img{
     width: 60%;
