--- a/Wireframe/css/style.css
+++ b/Wireframe/css/style.css
@@ -1,5 +1,11 @@
 body{
     margin: 0;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+}
+main{
+    flex-grow: 1;
 }
 header,footer{
     display: flex;
